# zswitch

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  LICENSE.txt  platformio.ini
src/: AppManager.cpp  AppManager.h  Configuration.cpp  Configuration.h  Event.cpp  Event.h  Events.h  Gang.cpp  Gang.h  Gangs.cpp  Gangs.h  Key.cpp  Key.h  MQTT.cpp  MQTT.h  Settings.h  SwitchEvent.cpp  SwitchEvent.h  Utils.cpp  Utils.h  Value.cpp  Value.h  WebServer.cpp  WebServer.h  WifiAP.cpp  WifiAP.h  WifiClient.cpp  WifiClient.h  WifiLedIndicator.cpp  WifiLedIndicator.h  ZSwitchAppManager.cpp  ZSwitchAppManager.h  zswitch.cpp
